--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body{
    font-weight: 700;
    line-height: 55px;
    margin: 0 0 30px 0;
-   color: #ffff;
+   color: #fff;
 }
 .description {   
    font-size: 20px;
