--- a/css/style.css
+++ b/css/style.css
@@ -50,20 +50,23 @@ body{
    margin: 0 0 25px 0;
    color: #ffff;
 }
+.top-info-btn{
+    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    width: 29%;
+}
 .top-info__btn-descr {
    text-decoration: none;
    font-weight: 300;
    font-size: 18px;
    line-height: 45px;
-   border: 3px solid #3F97F6;
    background-color: #3F97F6;
    padding: 10px 80px;
    border-radius: 6px;
-   
 }
 .top-info__btn-descr:visited{
     color: #ffff;
 }
-.top-info__img {
-       
+.top-info-btn:hover{
+    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    -webkit-transform: translateY(5px);
 }
