--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,15 @@ body{
 }
 
 .benefit{
-    
+    padding: 100px 0 120px;
+    background-color: #F2F2F2;
 }
 h2{
     font-weight: 700;
     font-size: 40px;
     color: #424242;
     text-align: center;
-    padding: 100px 0 42px 0;
+    padding: 0 0 42px 0;
 }
 .benefit-items{
     display: flex;
@@ -89,7 +90,7 @@ h2{
 }
 .benefit-item {
     max-width: 270px;
-    max-height: 400px;
+    max-height: 380px;
     box-shadow: 0px 21px 49px 1px rgba(41, 44, 61, 0.15);
 }
 .benefit-item__inner{
@@ -115,4 +116,98 @@ h2{
     line-height: 24px;
     color: #333333;
     text-align: center;
+}
+
+.about{
+    padding: 110px 0 120px;
+}
+.about__inner {  
+    
+}
+.about-info__title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 56px;
+    color: #424242;
+    margin-bottom: 30px;
+}
+.about-info__description {
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 24px;
+    color: #333333;
+}
+.about-info__description p {
+    width: 1172px;
+}
+
+.about-info__image {
+    margin-right: 40px;
+    float: left;
+}
+
+.call{
+    background-color: #f2f2f2;
+    padding: 105px 0 95px;
+}
+.call__inner {
+    text-align: center;
+}
+.call-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 50px;
+    color: #424242;
+    margin-bottom: 30px;
+}
+.call-btn {
+    background-color: #3F97F6;
+    width: 40%;
+    margin: 0 auto;
+    border-radius: 6px;
+    margin-bottom: 25px;
+    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+}
+.call-btn:hover{
+    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    -webkit-transform: translateY(5px);
+}
+.call-btn__text {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 54px;
+    color: #ffff;
+    text-decoration: none;
+    padding: 16px 153px;
+    
+}
+.call-btn__dscr {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.offers{
+    padding: 105px 0 85px;
+}
+.offers-title {
+}
+.offers-subtitle {
+}
+.offers-items {
+}
+.offers-item {
+}
+.offers-item__inner {
+}
+.offers-item__image {
+}
+.offers-item__title {
+}
+.offers-item__descr {
+}
+.offers-item__btn {
+}
+.offer-item_btn-text {
 }
