--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body{
    color: #ffff;
 }
 .top-info-btn{
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
     width: 29%;
 }
 .top-info__btn-descr {
@@ -67,8 +67,8 @@ body{
     color: #ffff;
 }
 .top-info-btn:hover{
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
-    -webkit-transform: translateY(5px);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transform: translateY(5px);
 }
 
 .benefit{
@@ -121,9 +121,6 @@ h2{
 .about{
     padding: 110px 0 120px;
 }
-.about__inner {  
-    
-}
 .about-info__title {
     font-weight: 700;
     font-size: 40px;
@@ -166,11 +163,11 @@ h2{
     margin: 0 auto;
     border-radius: 6px;
     margin-bottom: 25px;
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
 }
 .call-btn:hover{
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
-    -webkit-transform: translateY(5px);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transform: translateY(5px);
 }
 .call-btn__text {
     font-weight: 300;
@@ -250,11 +247,11 @@ h2{
     margin: 0 auto;
     border-radius: 6px;
     padding: 10px 0;
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
 }
 .offers-item__btn:hover{
-    -webkit-transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
-    -webkit-transform: translateY(5px);
+    transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+    transform: translateY(5px);
 }
 .offer-item_btn-text {
     text-decoration: none;
@@ -264,26 +261,60 @@ h2{
 
 .credit{
     background-color: #F2F2F2;
+    padding: 100px 0 90px;
 }
 .credit-info {
     display: flex;
     
 }
 .credit-info__img {
-
+    width: 600px;
+   
 }
 .crdit-info__block{
     background-color: #ffff;
+    height: 380px;
+    margin-top: 52px;
+    padding: 0 52px;
+    box-shadow: 0px 20px 49px 1px rgba(41, 44, 61, 0.15);
 }
 .credit-info__title {
-
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 42px;
+    color: #424242;
+    margin: 50px 0 21px;
+}
+.credit-info__title::after{
+    content: "";
+    display: block;
+    width: 50px;
+    height: 2px;
+    margin: 20px 0;
+    background-color: #000000;
 }
 .credit-info__descr {
-
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 24px;
+    color: #333333;
+    margin-bottom: 27px;
 }
 .credit-info__btn {
-
+    text-align: center;
+    background-color: #3F97F6;
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 6px;
+    padding: 10px 0;
+    transition: transform 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+}
+.credit-info__btn:hover{
+    transition: transform 0.6s cubic-bezier(0, 0.55, 0.45, 1);
+    transform: translateY(5px);
 }
 .credit-info__btn-text {
-
+    text-decoration: none;
+    color: #ffff;
+    padding: 8px 33px;
 }
