--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,122 @@ h2{
     color: #ffff;
     padding: 8px 33px;
 }
+
+.lastNews {
+    padding: 100px 0;
+}
+.lastNews-info {
+    color: #424242;
+}
+.lastNews-info__title {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+}
+.lastNews-info__subtitle {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+    color: #333333;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.lastNews-info-items {
+    display: flex;
+}
+.lastNews-item {
+  padding: 0 20px 40px;
+  transition: all 0.5s ease;
+}
+.lastNews-item:hover{
+    transform: scale(1.1); 
+    transition: all 0.5s ease;
+}
+
+.lastNews-item__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 15px;
+
+}
+.lastNews-item__title::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-top: 13px;
+    background-color:  #E2E2E2;
+}
+.lastNews-item__descr {
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 24px;
+    color: #333333;
+}
+
+.questions {
+    background-color: #f2f2f2;
+    padding: 100px 0;
+}
+
+.questions__inner {
+    color: #424242;
+    font-weight: 300;
+}
+.questions-title {
+    font-weight: 700;
+    font-size: 40px;
+    margin-bottom: 27px;
+    text-align: center;
+}
+.questions-subtitle{
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 25px;
+    color: #333333;
+    text-align: center;
+}
+.questions-items {
+
+}
+.questions-item {
+    position: relative;
+    width: 82%;
+    margin-left: 10%;
+}
+.questions-item__problem {
+    background-color: #ffffff;
+    font-size: 20px;
+    line-height: 28px;
+    color: #333333;
+    padding: 10px 40px 10px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 13px 50px 1px rgba(41, 44, 61, 0.1)
+}
+.questions-item__btn {
+    background-color: #3F97F6;
+    padding: 7px 11px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: block; 
+    top: 10px;
+    left: 95%;
+    position: absolute;
+}
+.questions-item__btn-text{
+    color: #ffff;
+    text-decoration: none;
+    display: none;
+}
+.questions-item__btn-text:active{
+    color: black;
+}
+.questions-item__answer {
+    margin: 10px 0 25px;
+    font-size: 17px;
+    line-height: 24px;
+    color: #333333;
+}
