--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ body{
 }
 .top-info-btn{
     transition: transform 0.6s cubic-bezier(0.33, 1, 0.68, 1);
-    width: 29%;
 }
 .top-info__btn-descr {
    color: #ffff;
@@ -571,5 +570,27 @@ h2{
 @media (max-width: 1200px) {
     .footer-map iframe{
         width: 800px;
+    }
+    .credit-info__descr{
+        margin-bottom: 0;
+    }
+}
+@media (max-width: 1140px) {
+    .lastNews-info-items{
+        display: grid;
+        grid-template-columns: 550px;
+        justify-content: center;
+    }
+    .benefit-items{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 30px 0;
+        justify-items: center;
+    }
+    .offers-items{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
     }
 }
